--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <a href="./index.html">
-      <img src="./img/WebStudio(1).jpg" alt="логотип компании">
+      <p>WebStudio</p>
       </a>
       <ul>
         <li><a href="">Студия</a></li>
@@ -35,19 +35,19 @@
       <h2>Наши преимущества</h2>
       <ul>
         <li>
-          <h2>Внимание к деталям</h2>
+          <h3>Внимание к деталям</h3>
           <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
-          <h2>Пунктуальность</h2>
+          <h3>Пунктуальность</h3>
           <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li>
-          <h2>Планирование</h2>
+          <h3>Планирование</h3>
           <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li>
-          <h2>Современные технологии</h2>
+          <h3>Современные технологии</h3>
           <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
       </ul>
@@ -66,23 +66,23 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./img/Игорь.jpg" alt="работник1" width="270">
+          <img src="./img/imgi.jpg" alt="работник1" width="270">
           <h3>Игорь Демьяненко</h3>
           <p>Product Designer</p>
         </li>
         <li>
 
-          <img src="./img/Ольга.jpg" alt="работник2" width="270">
+          <img src="./img/imgo.jpg" alt="работник2" width="270">
           <h3>Ольга Репина</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./img/Николай.jpg" alt="работник3" width="270">
+          <img src="./img/imgn.jpg" alt="работник3" width="270">
           <h3>Николай Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./img/Михаил.jpg" alt="работник4" width="270">
+          <img src="./img/imgn.jpg" alt="работник4" width="270">
           <h3>Михаил Ермаков</h3>
           <p>UI Designer</p>
         </li>
@@ -91,12 +91,14 @@
   </main>
   <!--Футер-->
   <footer>
+    <a href="./index.html">
+      <p>WebStudio</p>
     <address>
-      <a href="./index.html">
-        <img src="./img/WebStudio(1).jpg" alt="логотип компании"> </a> <br>
-      г. Киев, пр-т Леси Украинки, 26 <br>
-      <a href="mailtoinfo@devstudio.com">info@devstudio.com</a> <br>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+      <li><a href="https://bit.ly/3pXMvUd"> г. Киев, пр-т Леси Украинки, 26 </a></li>
+      <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </address>
   </footer>
 </body>
