--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
   </main>
   <!--Футер-->
   <footer>
-    <a href="./index.html">
+    <a href="./index.html"></a>
       <p>WebStudio</p>
-    <address>
+     <address>
       <ul>
-      <li><a href="https://bit.ly/3pXMvUd"> г. Киев, пр-т Леси Украинки, 26 </a></li>
-      <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="https://goo.gl/maps/sFrkbbnZgDk9SQtv6">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </address>
+      </address>
   </footer>
 </body>
 </html>
