--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
   </main>
   <!--Футер-->
   <footer>
-    <a href="./index.html"></a>
-      <p>WebStudio</p>
+    <a href="./index.html">WebStudio</a>
      <address>
       <ul>
         <li><a href="https://goo.gl/maps/sFrkbbnZgDk9SQtv6">г. Киев, пр-т Леси Украинки, 26</a></li>
